syntax = "proto3";

package def.apis;

option java_package = "com.instruction.gateway.proto";
option java_outer_classname = "ApisDef";
option java_multiple_files = true;

enum GATEWAY_APIS {
    // 网关登陆验证接口 args： token string
    GATEWAY_PASSPORT_V1_0_0 = 0;
    // 匹配重定向接口
    MATCHING_REDIRECT_V1_0_0 = 1;
    // 房间服务器重定向接口
    GAME_ROOM_REDIRECT_v1_0_0 = 2;
}

